--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
@@ -7,6 +7,9 @@
 {%endblock%}
 {% block body %}
 
+<div class="allifmaal-main-container">
+<div class="allifmaincontainer">
+  
 <!--start....main headere-->
 <div class="card-header">
 
@@ -15,54 +18,25 @@
 <div class="col-md-12"><!--start....header column-->
 
 <div class="container-fluid amel-content-header">
-  
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  
-  
-   
 <div class="dropdown allifmaal-content-dropdown">
   <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
   Actions
   </a>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
     <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditBranch' allifquery.id user_var glblslug %}">Edit Branch</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditBranch' allifquery.id user_var glblslug %}">Edit Branch</a></li>
 
-    <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteBranch' allifquery.id user_var glblslug %}">Delete Branch</a></li>
-
+      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteBranch' allifquery.id user_var glblslug %}">Delete Branch</a></li>
+  
    </div>
   </ul>
 </div>
-
-<a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Accounts
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL Accounts</a></li>
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a></li>
-    
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Banks
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-      </li>
-    <li><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a></li>
-    </div>
-  </ul>
-</div>
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
+<a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
+<a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}">Branches</a>
 <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
+
 </div>
 
     </div><!--end....header column-->
@@ -73,267 +47,231 @@
 
 
 <!--start of main body-->
-<div class="allifmaincontainer">
 
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="table-details-content-description">{{allifquery}} </div>
-    <div class="allif-details-container">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-          <tr>
-            <td>Company</td>
-            <td>{{allifquery.company}}</td>
-        
-            </tr>
-           
-             
-        <tr>
-          <td>Email</td>
-          <td>{{allifquery.email}}</td>
-      
-          </tr>
-          
-            <tr>
-              <td>Phone 1</td>
-              <td>{{allifquery.phone1}}</td>
-          
-              </tr>
-          <tr>
-            <td>Phone 2</td>
-            <td>{{allifquery.phone2}}</td>
-        
-            </tr>
-      <tr>
-        <td>City</td>
-        <td>{{allifquery.city}}</td>
+  <!--start of column two-->
+  <div class="col-md-4">
     
-        </tr>
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
         <tr>
-          <td>Country</td>
-          <td>{{allifquery.country}}</td>
-      
+          <td class="allif-fix-table-col">Company</td>
+          <td>{{allifquery.company}}</td>
           </tr>
-            
-                      
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{allifquery.division}}</td>
+        </tr>
+      <tr>
+        <td class="allif-fix-table-col">Email</td>
+        <td>{{allifquery.email}}</td>
+        </tr>
+      <tr>
+        <td class="allif-fix-table-col">Phone</td>
+        <td>{{allifquery.phone}}</td>
+        </tr>
+      
+   
+        </tbody>
+        </table>
+      </div>
+        </div>
            
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">City</td>
+            <td>{{allifquery.city}}</td>
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Created By</td>
+            <td>{{allifquery.owner}}</td>
+            </tr>
          
+        <tr>
+            <td class="allif-fix-table-col">P.O.Box</td>
+            <td>{{allifquery.pobox}}</td>
+            </tr>
+         
+          <tr>
+            <td class="allif-fix-table-col">Address</td>
+            <td>{{allifquery.address}}</td>
+            </tr>
+      
+      
           </tbody>
           </table>
-        
           </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-       
-        
-        <tr>
-          <td>Created By</td>
-          <td>{{allifquery.owner}}</td>
-      
-          </tr>
-       
-      <tr>
-          <td>P.O.Box</td>
-          <td>{{allifquery.pobox}}</td>
-      
-          </tr>
-        <tr>
-          <td>Website</td>
-          <td>{{allifquery.website}}</td>
-      
-          </tr>
-        <tr>
-          <td>Address</td>
-          <td>{{allifquery.address}}</td>
-        
-          </tr>
-    <tr>
-    <td>Sector</td>
-    <td>{{allifquery.sector}}</td>
-
-    </tr>
-    <tr>
-      <td>Date</td>
-      <td>{{allifquery.date|date:'d/m/Y'}}</td>
-  
-      </tr>
-      <tr>
-        <td>Last Update</td>
-        <td>{{allifquery.updatedon|date:'d/m/Y'}}</td>
+          </div>
     
-        </tr>
-      
-
-        </tbody>
-        </table>
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Last Update</td>
+              <td>{{allifquery.updatedon|date:'d/m/Y'}}</td>
+          
+              </tr>
+                  
+            
+            <tr>
+            <td class="allif-fix-table-col">UID</td>
+            <td>{{allifquery.branchuid}}</td>
+          
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Slug</td>
+              <td>{{allifquery.branchslug}}</td>
+          
+          </tr> 
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-    
-    <tr>
-      <td>UID</td>
-      <td>{{allifquery.companyuid}}</td>
-  
-      </tr>
-      <tr>
-        <td>Slug</td>
-        <td>{{allifquery.companyslug}}</td>
-    
-  </tr> 
-    <tr>
-      <td>Logo</td>
-      <td>
-      {% if allifquery.logo %}
-      <a href="{{ allifquery.logo.url }}" class="btn btn-secondary allifanchorimge" target="_blank" >
-       <img src="{{allifquery.logo.url}}"  width="200" ></a>
-      {% else %}
-      <span class="text-muted">No Logo</span>
-      {% endif %}
-</td>
-    </tr>
-
-     
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
 
 </div><!--end....table row-->
-
-<!--end of table-->
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="allif-details-container">
-      <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-12">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-            <table class="table table-layout">
-              <thead>
-                <tr class="allif-table-header-row" >
-                  <td>Company Name</td>
-                  <td>Compnay Sector</td>
-                  <td>Company Owner</td>
-                  <td>Company Email Address</td>
-                 
-                </tr>
-                </thead>
-                <tbody class="allif-table-body">
-                  
-              
-                <tr>
-                  <td >
-                    <a href="{% url 'allifmaalcommonapp:commonEditEntityByClients' allifquery.id user_var glblslug %}" class="allif-table-links">
-                   {{allifquery.company}}
-                    </a>
-                  </td>
-                  <td>
-                    {{allifquery.sector}}
-                  </td>
-                  <td>{{allifquery.owner}}</td>
-                  
-                  <td>{{allifquery.email}}</td>
-               
-                  </td>
-              
-                </tr>
-              
-              
-              </tbody>
-            </table>
-      
-      </div><!--end of row div --->
-        
-          </div>
-
-</div><!--end....table row-->
-
+</div>
 <!--end of table-->
 
 </div><!--end of main container of the page....-->
-</div>
 
 
 
+<!--end of table-->
+
+<!--end of table-->
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
-    <div class="table-content-description"> <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}"> Scopes</a> </div>
-  <div class="allif-scroll-table"> 
-   
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
     <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row">
-        <td>Company Name</td>
-        <td>Scope</td>
-        <td>Owner</td>
-        <td>Edit Scope</td>
-        <td>Delete Scope</td>
+      <thead>
+        <tr class="allif-table-header-row">
+         
+          <td>Division Name</td>
+          <td>Created By</td>
+          <td>Email Address</td>
+         
+        </tr>
+        </thead>
+        <tbody class="allif-table-body">
        
+        <tr>
+          <td >
+            <a href="{% url 'allifmaalcommonapp:commonDivisionDetails' allifquery.id user_var glblslug %}" class="allif-table-links">
+           {{allifquery.division}}
+            </a>
+          </td>
+         
+          <td>{{allifquery.owner}}</td>
+          
+          <td>{{allifquery.email}}</td>
+       
+          </td>
       </tr>
-      </thead>
-      <tbody class="allif-table-body">
-        
-      {% for item in relatedqueryset %}
-      <tr>
-        <td >
-          <a href="" class="allif-table-links">
-         {{item.company}}
-          </a>
-        </td>
-        <td>
-          <a href="{% url 'allifmaalcommonapp:commonDepartmentDetails' item.id user_var glblslug %}">
-          {{item.description}}
-          </a>
-        </td>
-        <td>{{item.owner}}</td>
-        
-        <td>
-        
-        </td>
-        <td>
-          <a href="{% url 'allifmaalcommonapp:commonDeleteCompanyScope' item.id user_var glblslug %}">
-         Delete Scope
-         </a>
-        </td>
-    
-      </tr>
-      {% endfor %}
       
-    </tbody>
-  </table>
-  
-</div>
+      </tbody>
+    </table>
+    </div>
+   </div>
 
 </div><!--end....table column-->
 
 </div><!--end....table row-->
+
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="col-md-12"> <!--start....table column-->
+    <div class="table-content-description"> <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}" class="allif-table-links"> Departments</a> </div>
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+    <table class="table table-layout">
+      <thead>
+        <tr class="allif-table-header-row">
+        <td class="allif-fix-table-col">Branches</td>
+        <td>Division</td>
+        
+        <td>Owner</td>
+        <td>Date</td>
+       
+        <td>Navigate</td>
+        <td> . . . </td>
+        <td></td>
+        </tr>
+        </thead>
+        <tbody class="allif-table-body">
+         
+        
+        {% for item in relatedqueryset %} 
+        <tr data-id="{{item.id}}">
+          <td class="allif-fix-table-col">
+            <a href="{% url 'allifmaalcommonapp:commonDepartmentDetails' item.id user_var glblslug %}" class="allif-table-links">
+            {{item.department}}
+            </a>
+          </td>
+        <td>{{item.division}}</td>
+        <td>{{item.owner}}</td>
+        <td>{{item.date|date:'d/m/Y'}}</td>
+
+        <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">{{open_link}}</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditDepartment' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonBranchDetails' allifquery.id user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteDepartment' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+
+        </td>
+
+      
+       
+       <td> . . . </td>
+       <td></td>
+      </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+    </div>
+   </div>
+
+</div><!--end....table column-->
+
+</div><!--end....table row-->
+
+
+
+</div>
 
 </div>
   {% block scripts %}
@@ -341,8 +279,6 @@
   {% endblock %}
    {% endblock %}
    
-
-
 
 
 
