--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branches.html
@@ -7,17 +7,15 @@
 {%endblock%}
 {% block body %}
 
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
-
   <div class="row mt-12" ><!--start....header row-->
-  
   <div class="col-md-12"><!--start....header column-->
-  
   <div class="container-fluid amel-content-header">
     <div class="dropdown allifmaal-content-dropdown">
       <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
+      Filters
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <div class="content-dropdown-menu">
@@ -34,225 +32,112 @@
       </div>
       </ul>
     </div>
-    <a class="amel-table-list-identifier">Companies:</a>
 
+    <a class="amel-table-list-identifier">Branches:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Companies</a>
     
     <a href="{% url 'allifmaalcommonapp:commonAddBranch' user_var glblslug %}">Add Branch</a>
-    
-    <a href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors</a>
-  <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}" >Sectors</a></li>
-    
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
+   
+  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
   
   </div>
-  
-      </div><!--end....header column-->
-    
+    </div><!--end....header column-->
     </div><!--end....header row-->
-  
   </div><!--end....main headere-->
 
-        
 <div class="allifmaincontainer">
-  {% if clicked_row_data %}
-  <div class="row mt-12"> <!--start....table row-->
-    
-    <div class="instant-details-container">
-      <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-          <tr>
-            <td>Company</td>
-            <td>
-              <a href="{% url 'allifmaalcommonapp:commonCompanyDetails' clicked_row_data.id user_var glblslug %}" class="allif-table-links">
-            {{clicked_row_data.company}}
-            </a>
-          </td>
-        
-            </tr>
-        <tr>
-          <td>Phone</td>
-          <td>{{clicked_row_data.phone1}}</td>
-      
-          </tr>
-          
-          
-          </tbody>
-          </table>
-        
-          </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-       
-        
-        <tr>
-          <td>Country</td>
-          <td>{{clicked_row_data.country}}</td>
-      
-          </tr>
-       
-      <tr>
-          <td>Address</td>
-          <td>{{clicked_row_data.address}}</td>
-      
-          </tr>
-       
-        </tbody>
-        </table>
-      
-        </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-    
-    <tr>
-      <td>Email</td>
-      <td>{{clicked_row_data.email}}</td>
-  
-      </tr>
-      <tr>
-        <td>Sector</td>
-        <td>{{clicked_row_data.sector}}</td>
-    
-  </tr> 
-   
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
-
-</div><!--end....table row-->
-{% endif %}
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table"> 
-     
-      <table class="table table-layout">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+    <table class="table table-layout">
       <thead>
         <tr class="allif-table-header-row">
-          <td>Company</td>
-          <td>Division</td>
-          <td>Branch</td>
-          <td>Owner</td>
-         
+        <td class="allif-fix-table-col">Branch</td>
+        <td>Address</td>
+        <td>Created By</td>
+        <td>Date</td>
+        <td>Navigate</td>
+        
+        <td> . . . </td>
+        <td></td>
         </tr>
         </thead>
         <tbody class="allif-table-body">
+         
+        
+        {% for item in allifqueryset %} 
+        <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBranchDetails' item.id user_var glblslug %}">{{item.branch}}</a></td>
+        <td>{{item.address}}</td>
+        <td>{{item.owner}}</td>
+        <td>{{item.date|date:'d/m/Y'}}</td>
+       
+        <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditBranch' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
             
-        {% for item in allifqueryset %}
-        <tr>
-          <td>
-            {{item.company}}
-          </td>
-          <td>
-            {{item.division}}
-          </td>
-          <td>
-            <a href="{% url 'allifmaalcommonapp:commonBranchDetails' item.id user_var glblslug %}" class="allif-table-links">
-           {{item.branch}}
-            </a>
-          </td>
+            <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteBranch' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
          
-          <td>{{item.owner}}</td>
-        
-        </tr>
-        {% endfor %}
-        {% if searched_data %}
+        </td>
+
+       <td> . . . </td>
+       <td></td>
+      </tr>
+      {% endfor %}
+      {% if searched_data %}
         {% for item in searched_data %}
-        <tr>
-          <td>
-            {{item.company}}
-          </td>
-          <td>
-            {{item.division}}
-          </td>
-          <td>
-            <a href="{% url 'allifmaalcommonapp:commonBranchDetails' item.id user_var glblslug %}" class="allif-table-links">
-           {{item.branch}}
-            </a>
-          </td>
-         
+        <tr data-id="{{item.id}}">
+          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBranchDetails' item.id user_var glblslug %}">{{item.branch}}</a></td>
+          <td>{{item.address}}</td>
           <td>{{item.owner}}</td>
-        
+          <td>{{item.date|date:'d/m/Y'}}</td>
+         
+          <td>
+            <div class="dropdown allifmaal-content-dropdown">
+              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+              <div class="dropdown-content">
+                <a href="{% url 'allifmaalcommonapp:commonEditBranch' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                
+              </div>
+            </div>
+            <div class="dropdown allif-confirm-action">
+              
+              <a href="{% url 'allifmaalcommonapp:commonBranches' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteBranch' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+            </div>
+  
+           
+          </td>
+  
+         <td> . . . </td>
+         <td></td>
         </tr>
         {% endfor %}
           {%endif %}
       </tbody>
     </table>
-    
-  </div>
-  
-  </div><!--end....table column-->
+    </div>
+   </div>
+
+</div><!--end....table column-->
 
 </div><!--end....table row-->
 
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-  <!--start of the side bar-->
-  <div id="content-hidden-sidenavbar-id" class="content-hidden-sidenavbar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close</a>
-      <div>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonCompanyAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-      
-          <div class="mb-3">
-          
-            <input type="text" class="form-control" name="strtdate" placeholder="Starting Date y-m-d">
-          </div>
-          <div class="mb-3">
-            
-            <input type="text" class="form-control" name="enddate" placeholder="Ending Date y-m-d">
-          </div>
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-      
-      </form>
-      </div>
-    </div>
-  
+</div>
+</div>
   {% block scripts %}
  
   {% endblock %}
-  
-   {% endblock %}
-   
+  {% endblock %}
