--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
@@ -8,7 +8,8 @@
 {% block body %}
 
 <div class="allifmaal-main-container">
-<!--start....main headere-->
+<div class="allifmaincontainer">
+  <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
@@ -16,6 +17,38 @@
     <a class="amel-table-list-identifier">Divisions:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
     <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+
+
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+    <a class="amel-table-list-identifier">Divisions:</a>
+    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonAddDivision'  user_var glblslug %}">New Division</a>
+
+    
   <div class="dropdown allifmaal-content-dropdown">
     <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     Modules
@@ -33,8 +66,7 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
-
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
