--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
@@ -7,7 +7,7 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
+
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -45,7 +45,7 @@
 
 </div><!--end....main headere-->
 
-
+<div class="allif-content-spacer"></div>
 <!--start of main body-->
 
 <div class="row mt-12"> <!--start....table row-->
@@ -273,7 +273,7 @@
 
 </div>
 
-</div>
+
   {% block scripts %}
 
   {% endblock %}
