--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details.html
@@ -7,7 +7,6 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -105,7 +104,7 @@ Accounts
 
 </div><!--end....main headere-->
 
-
+<div class="allif-content-spacer"></div>
 <!--start of main body-->
 
 
@@ -355,9 +354,6 @@ Accounts
 
 </div><!--end....table row-->
 
-
-
-</div>
 
 </div>
   {% block scripts %}
