--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity-client.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity-client.html
@@ -7,6 +7,8 @@
 {%endblock%}
 {% block body %}
 
+<div class="allifmaincontainer">
+
 <!--start....main headere-->
 <div class="card-header">
 
@@ -40,7 +42,7 @@
 
 
 
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
 
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"><!--start of the first row body-->
