--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
@@ -7,7 +7,6 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -37,7 +36,7 @@
 
 <!--start of main body-->
 
-
+<div class="allif-content-spacer"></div>
 
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">Add/Edit New Division</div>
@@ -137,10 +136,6 @@
 
 </div><!--end of main container of the page....-->
 
-
-
-
-</div>
 
 </div>
   {% block scripts %}
