--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/division-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/division-details.html
@@ -7,7 +7,6 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -45,7 +44,7 @@
 
 </div><!--end....main headere-->
 
-
+<div class="allif-content-spacer"></div>
 <!--start of main body-->
 
 <div class="row mt-12"> <!--start....table row-->
@@ -270,10 +269,6 @@
 </div><!--end....table column-->
 
 </div><!--end....table row-->
-
-
-
-</div>
 
 </div>
   {% block scripts %}
