--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/user-delete-confirm.html
@@ -196,7 +196,7 @@
        <div class="col-md-4">
         <div class="delete-options-container-delete">
           
-        <a href="{% url 'allifmaalcommonapp:commonDeleteUser' allifquery.customurlslug %}">Yes</a>
+        <a href="{% url 'allifmaalcommonapp:commonDeleteUser' allifquery.id user_var glblslug %}">Yes</a>
       </div>
     </div>
       
