--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/companies.html
@@ -7,8 +7,8 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
-<!--start....main headere-->
+<div class="allifmaincontainer">
+  <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
@@ -109,7 +109,8 @@
     </div><!--end....header row-->
   </div><!--end....main headere-->
 
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
+  
   {% if clicked_row_data %}
   
 <div class="row mt-12"> <!--start....table row-->
