--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -7,7 +7,6 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -74,7 +73,7 @@
 
 
 <!--start of main body-->
-
+<div class="allif-content-spacer"></div>
 
 
 <div class="row mt-12"> <!--start....table row-->
@@ -321,7 +320,6 @@
 
 </div>
 
-</div>
   {% block scripts %}
 
   {% endblock %}
