--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity.html
@@ -7,6 +7,8 @@
 {%endblock%}
 {% block body %}
 
+<div class="allifmaincontainer">
+  
 
 <!--start....main headere-->
 <div class="card-header">
@@ -63,7 +65,7 @@
   </div><!--end....main headere-->
       
 
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"><!--start of the first row body-->
         <div class="allif-form-container">
