--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/add-department.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/add-department.html
@@ -7,7 +7,7 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
+
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -37,7 +37,7 @@
 <!--start of main body-->
 
 
-
+<div class="allif-content-spacer"></div>
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">Add/Edit New Department</div>
   <form method='POST' action=''>{% csrf_token %}
@@ -164,10 +164,6 @@
 
 </div><!--end of main container of the page....-->
 
-
-
-
-</div>
 
 </div>
   {% block scripts %}
