--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/department-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/department-details.html
@@ -7,7 +7,6 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
 <div class="allifmaincontainer">
   
 <!--start....main headere-->
@@ -47,7 +46,7 @@
 
 
 <!--start of main body-->
-
+<div class="allif-content-spacer"></div>
 <div class="row mt-12"> <!--start....table row-->
   <div class="table-details-content-description">{{allifquery}} Details</div>
   <div class="col-md-12"> <!--start....table column-->
@@ -204,7 +203,6 @@
 
 </div>
 
-</div>
   {% block scripts %}
 
   {% endblock %}
