--- a/allifmaalcommonapp/templates/allifmaalcommonapp/docformats/docformats.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/docformats/docformats.html
@@ -6,9 +6,8 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaal-main-container">
-<!--start....main headere-->
+<div class="allifmaincontainer">
+  <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
@@ -39,8 +38,7 @@
     </div><!--end....header column-->
     </div><!--end....header row-->
   </div><!--end....main headere-->
-
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -121,10 +119,8 @@
  </div>
   </div><!--end of row div --->
 
-
-
 </div>
-</div>
+
   {% block scripts %}
  
   {% endblock %}
