--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/staff/staff.html
@@ -7,14 +7,15 @@
 {%endblock%}
 {% block body %}
 
-<!--start....main headere-->
+<div class="allifmaincontainer">
+  <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
   <div class="container-fluid amel-content-header">
     <div class="dropdown allifmaal-content-dropdown">
       <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
+      Filters
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <div class="content-dropdown-menu">
@@ -66,168 +67,144 @@
     </div>
     </ul>
   </div>
-  <a href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Companies</a>
+ 
   <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
+
+
   </div>
-      </div><!--end....header column-->
-    
+    </div><!--end....header column-->
     </div><!--end....header row-->
-  
   </div><!--end....main headere-->
 
-  <!--start of main container-->
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
+  
   {% if clicked_row_data %}
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="instant-details-container">
-      <div class="row"><!--start of row div --->
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-          <tr>
-            <td>First Name</td>
-            <td>
-              <a href="{% url 'allifmaalcommonapp:commonUserDetails' clicked_row_data.id user_var glblslug %}" class="allif-table-links">
-            {{clicked_row_data.first_name}}
-            </a>
-          </td>
-          </tr>
-          </tbody>
-          </table>
-        
-          </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-       
-        <tr>
-          <td>Last Name</td>
-          <td>{{clicked_row_data.last_name}}</td>
-          </tr>
-       
-        </tbody>
-        </table>
-      
-        </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-    
-      <tr>
-      <td>Email</td>
-      <td>{{clicked_row_data.email}}</td>
   
-      </tr>
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
-
-</div><!--end....table row-->
-{% endif %}
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table"> 
-      <table class="table table-layout">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+    <table class="table table-layout">
       <thead>
-      <tr class="allif-table-header-row">
-      <td>First Name</td>
-      <td>Last Name</td>
-      <td>Email Address</td>
-      <td>Category</td>
-  </tr>
-  </thead>
-  <tbody class="allif-table-body">
-    {% for item in allifqueryset %}   
-    <tr>
-    <td>
-    <a href="{% url 'allifmaalcommonapp:commonShowClickedRowUserDetails' item.id user_var glblslug %}" class="allif-table-links">
-    {{item.first_name}}
-    </a></td>
-    
-    <td>
-    {{item.last_name}}
-   </td>
-   <td>
-    {{item.email}}
-   </td>
-    
-   
-    {% if item.user_category == 'admin' %}
-    <td class="adminuser"> {{item.user_category}}</td>
-    {% else %}
-    <td> {{item.user_category}}</td>
-    {% endif %}
-    
-    </tr>
-      {% endfor %}
-      
-      {% if searched_data %}
-  
-      {% for item in searched_data %}
-      <tr>
-     
-        <td>
-        <a href="{% url 'allifmaalcommonapp:commonUserDetails' item.id user_var glblslug %}" class="allif-table-links">
-        {{item.first_name}}
-        </a></td>
-        
-        <td>
-        {{item.last_name}}
-       </td>
-       <td>
-        {{item.email}}
-       </td>
-        
-       
-        {% if item.user_category == 'admin' %}
-        <td class="adminuser"> {{item.user_category}}</td>
-        {% else %}
-        <td> {{item.user_category}}</td>
-        {% endif %}
-       
+        <tr class="allif-table-header-row">
+        <td>First Name</td>
+        <td>Last Name</td>
+        <td>Email</td>
         </tr>
-      {% endfor %}
-        {%endif %}
+        </thead>
+        <tbody class="allif-table-body">
+        
+        <tr>
+        <td>
+          
+          <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonUserDetails' clicked_row_data.id user_var glblslug %}">
+          {{clicked_row_data.first_name}}
+          </a>
+        </td>
+        <td>{{clicked_row_data.last_name}}</td>
+        <td>{{clicked_row_data.email}}</td>
+      </tr>
+     
       </tbody>
     </table>
-    
-  </div>
+    </div>
+   </div>
+
+</div><!--end....table column-->
+
+</div><!--end....table row-->
+  {% endif %}
+<div class="row mt-12"> <!--start....table row-->
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+    <table class="table table-layout">
+      <thead>
+        <tr class="allif-table-header-row">
+        <td class="allif-fix-table-col">First Name</td>
+       
+        <td>Last Name</td>
+        <td>Email Address</td>
+        <td>Category</td>
+        <td>Navigate</td>
+        
+        <td> . . . </td>
+        <td></td>
+        </tr>
+        </thead>
+        <tbody class="allif-table-body">
+         
+        
+        {% for item in allifqueryset %} 
+        <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonShowClickedRowUserDetails' item.id user_var glblslug %}">{{item.first_name}}</a></td>
+       
+        <td>
+          {{item.last_name}}
+        </td>
+        <td>{{item.email}}</td>
+        
+        <td>{{item.user_category}}</td>
+     
+        </td>
+        <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditUser' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteUser' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+       <td> . . . </td>
+       <td></td>
+      
   
-  </div><!--end....table column-->
+    </tr>
+    {% endfor %}
+    {% if searched_data %}
+    {% for item in searched_data %}
+    <tr>
+      <td >
+        <a href="{% url 'allifmaalcommonapp:commonCompanyDetails' item.id user_var glblslug %}" class="allif-table-links">
+       {{item.company}}
+        </a>
+      </td>
+      <td>
+        {{item.sector}}
+      </td>
+      <td>{{item.owner}}</td>
+      
+      <td>{{item.email}}</td>
+   
+      </td>
+  
+    </tr>
+    {% endfor %}
+      {%endif %}
+
+      </tbody>
+    </table>
+    </div>
+   </div>
+
+</div><!--end....table column-->
 
 </div><!--end....table row-->
 
-<!--end of table-->
 
-
-</div><!--end of main container of the page....-->
-
+</div>
+</div>
   {% block scripts %}
  
   {% endblock %}
-  
-   {% endblock %}
-   
+  {% endblock %}
+
