--- a/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scopes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scopes.html
@@ -7,8 +7,8 @@
 {%endblock%}
 {% block body %}
 
-<div class="allifmaal-main-container">
-<!--start....main headere-->
+<div class="allifmaincontainer">
+  <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
@@ -40,7 +40,7 @@
     </div><!--end....header row-->
   </div><!--end....main headere-->
 
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -123,7 +123,7 @@
 
 
 </div>
-</div>
+
   {% block scripts %}
  
   {% endblock %}
