--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -6,8 +6,9 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-<div class="allifmaal-main-container">
-<!--start....main headere-->
+
+<div class="allifmaincontainer">
+  <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
@@ -50,8 +51,7 @@
   
   </div><!--end....main headere-->
 
-
-<div class="allifmaincontainer">
+  <div class="allif-content-spacer"></div>
   <div class="row mt-12"> <!--start....table row-->
     <div class="table-details-content-description">{{allifquery}} Details</div>
     <div class="col-md-12"> <!--start....table column-->
@@ -126,7 +126,7 @@
   
   </div><!--end of main container of the page....-->
 </div>
-</div>
+
   
   {% block scripts %}
  
